--- a/welcome.html
+++ b/welcome.html
@@ -19,9 +19,8 @@
           <p>Advanced Multi-Semester Scheduling System</p>
           <div class="landing-description">
             <p>
-              Streamline your academic scheduling with our intelligent timetable
-              generation system. Create optimized schedules for courses,
-              faculty, and rooms with ease.
+              Streamline your academic scheduling with our intelligent timetable generation system. Create optimized
+              schedules for courses, faculty, and rooms with ease.
             </p>
           </div>
         </div>
@@ -33,10 +32,7 @@
               <img src="res/timetable.svg" alt="Automated Generation" />
             </div>
             <h3>Automated Generation</h3>
-            <p>
-              Generate optimal timetables automatically based on your
-              constraints and requirements
-            </p>
+            <p>Generate optimal timetables automatically based on your constraints and requirements</p>
           </div>
 
           <div class="feature-card">
@@ -44,10 +40,7 @@
               <img src="res/faculty.svg" alt="Faculty Management" />
             </div>
             <h3>Faculty Management</h3>
-            <p>
-              Manage faculty schedules, specializations, and availability
-              efficiently
-            </p>
+            <p>Manage faculty schedules, specializations, and availability efficiently</p>
           </div>
 
           <div class="feature-card">
@@ -55,26 +48,17 @@
               <img src="res/subject.svg" alt="Subject Planning" />
             </div>
             <h3>Subject Planning</h3>
-            <p>
-              Organize subjects, courses, and departments with flexible hour
-              allocation
-            </p>
+            <p>Organize subjects, courses, and departments with flexible hour allocation</p>
           </div>
         </div>
 
         <!-- Call to Action -->
         <div class="landing-cta">
           <h2>Ready to Get Started?</h2>
-          <p>
-            Join thousands of educators who trust our platform for their
-            scheduling needs
-          </p>
+          <p>Join thousands of educators who trust our platform for their scheduling needs</p>
           <div class="cta-buttons">
             <a href="register.html" class="btn btn-primary">Get Started Free</a>
             <a href="login.html" class="btn btn-secondary">Sign In</a>
-          </div>
-          <div class="demo-link">
-            <a href="index.html" class="link-demo">or explore the demo</a>
           </div>
         </div>
       </div>
@@ -87,5 +71,11 @@
         <div class="decoration-circle decoration-circle-4"></div>
       </div>
     </div>
+
+    <!-- Toast Notification Container -->
+    <div id="toast-container" class="toast-container" aria-live="polite" aria-label="Notifications"></div>
+
+    <!-- JavaScript -->
+    <script src="welcome.js"></script>
   </body>
 </html>
