--- a/welcome.html
+++ b/welcome.html
@@ -50,6 +50,14 @@
             <h3>Subject Planning</h3>
             <p>Organize subjects, courses, and departments with flexible hour allocation</p>
           </div>
+
+          <div class="feature-card">
+            <div class="feature-icon">
+              <img src="res/save.svg" alt="Smart Scheduling" />
+            </div>
+            <h3>Smart Scheduling</h3>
+            <p>Advanced algorithms ensure conflict-free schedules with optimal room and time allocation</p>
+          </div>
         </div>
 
         <!-- Call to Action -->
