--- a/welcome.html
+++ b/welcome.html
@@ -65,7 +65,7 @@
           <h2>Ready to Get Started?</h2>
           <p>Join thousands of educators who trust our platform for their scheduling needs</p>
           <div class="cta-buttons">
-            <a href="register.html" class="btn btn-primary">Get Started Free</a>
+            <a href="register.html" class="btn btn-primary">Get Started</a>
             <a href="login.html" class="btn btn-secondary">Sign In</a>
           </div>
         </div>
