--- a/login.html
+++ b/login.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="res/favicon.png" type="image/x-icon" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="responsive.css" />
     <title>Login - Interactive Timetable Generator</title>
   </head>
   <body>
@@ -23,22 +24,12 @@
         <form id="loginForm" class="auth-form" method="POST" action="#">
           <div class="form-group">
             <label for="email">Email Address</label>
-            <input
-              type="email"
-              id="email"
-              name="email"
-              placeholder="Enter your email"
-              required />
+            <input type="email" id="email" name="email" placeholder="Enter your email" required />
           </div>
 
           <div class="form-group">
             <label for="password">Password</label>
-            <input
-              type="password"
-              id="password"
-              name="password"
-              placeholder="Enter your password"
-              required />
+            <input type="password" id="password" name="password" placeholder="Enter your password" required />
           </div>
 
           <div class="form-options">
@@ -52,9 +43,7 @@
           <button type="submit" class="btn auth-btn">Sign In</button>
 
           <div class="auth-footer">
-            <p>
-              Don't have an account? <a href="register.html">Create Account</a>
-            </p>
+            <p>Don't have an account? <a href="register.html">Create Account</a></p>
           </div>
         </form>
       </div>
@@ -68,11 +57,7 @@
     </div>
 
     <!-- Toast Notification Container -->
-    <div
-      id="toast-container"
-      class="toast-container"
-      aria-live="polite"
-      aria-label="Notifications"></div>
+    <div id="toast-container" class="toast-container" aria-live="polite" aria-label="Notifications"></div>
 
     <!-- JavaScript -->
     <script src="auth.js"></script>
