--- a/index.html
+++ b/index.html
@@ -91,13 +91,13 @@
         <form id="timetableGenForm" class="generator-form">
           <div class="form-row">
             <div class="form-group">
-              <label>Course Name</label>
+              <label for="genCourse">Course Name</label>
               <select id="genCourse" required>
                 <option value="">Select course</option>
               </select>
             </div>
             <div class="form-group">
-              <label>Department</label>
+              <label for="genDepartment">Department</label>
               <select id="genDepartment" required>
                 <option value="">Select department</option>
               </select>
@@ -105,29 +105,29 @@
           </div>
           <div class="form-row">
             <div class="form-group">
-              <label>Semester</label>
+              <label for="genSemester">Semester</label>
               <select id="genSemester" required>
                 <option value="">Select semester</option>
               </select>
             </div>
             <div class="form-group">
-              <label>Number of Students</label>
+              <label for="genStudents">Number of Students</label>
               <input type="number" id="genStudents" placeholder="60" min="1" required />
             </div>
           </div>
           <div class="form-row">
             <div class="form-group">
-              <label>College Start Time</label>
+              <label for="collegeStartTime">College Start Time</label>
               <input type="time" id="collegeStartTime" value="09:00" required />
             </div>
             <div class="form-group">
-              <label>College End Time</label>
+              <label for="collegeEndTime">College End Time</label>
               <input type="time" id="collegeEndTime" value="17:00" required />
             </div>
           </div>
           <div class="form-row">
             <div class="form-group">
-              <label>Lecture Duration (minutes)</label>
+              <label for="slotDuration">Lecture Duration (minutes)</label>
               <input
                 type="number"
                 id="slotDuration"
@@ -141,7 +141,7 @@
               />
             </div>
             <div class="form-group">
-              <label>Number of Lectures per Day<small> (0 for auto-calculate)</small></label>
+              <label for="lecturesPerDay">Number of Lectures per Day<small> (0 for auto-calculate)</small></label>
               <input
                 type="number"
                 id="lecturesPerDay"
@@ -157,13 +157,13 @@
           </div>
           <div class="last-row">
             <div class="form-group checkbox-group">
-              <label class="checkbox-label" style="display: flex; margin-bottom: 0px; margin-left: 0px">
+              <label for="hasBreak" class="checkbox-label" style="display: flex; margin-bottom: 0px; margin-left: 0px">
                 <input type="checkbox" id="hasBreak" name="hasBreak" />
                 <span>Enable Break Time</span>
               </label>
             </div>
             <div class="form-group">
-              <label>Break Start Time</label>
+              <label for="breakStartTime">Break Start Time</label>
               <input
                 type="time"
                 id="breakStartTime"
@@ -174,7 +174,7 @@
               />
             </div>
             <div class="form-group">
-              <label>Break End Time</label>
+              <label for="breakEndTime">Break End Time</label>
               <input
                 type="time"
                 id="breakEndTime"
@@ -242,22 +242,24 @@
           <p>Manage academic courses and their departments</p>
           <div class="form-row">
             <div class="form-group">
-              <label>Course Name</label>
+              <label for="courseName">Course Name</label>
               <input
                 type="text"
                 id="courseName"
                 name="courseName"
                 placeholder="e.g., Bachelor of Engineering, Master of Science"
+                autocomplete="off"
                 required
               />
             </div>
             <div class="form-group">
-              <label>Department Name</label>
+              <label for="departmentName">Department Name</label>
               <input
                 type="text"
                 id="departmentName"
                 name="departmentName"
                 placeholder="e.g., Computer Engineering, Information Technology"
+                autocomplete="off"
                 required
               />
             </div>
@@ -277,34 +279,36 @@
           <p>Add faculty members with their details and specialization.</p>
           <div class="form-row">
             <div class="form-group">
-              <label>Faculty Name</label>
-              <input type="text" id="facultyName" name="facultyName" placeholder="John Smith" required />
+              <label for="facultyName">Faculty Name</label>
+              <input type="text" id="facultyName" name="facultyName" placeholder="John Smith" autocomplete="name" required />
             </div>
             <div class="form-group">
-              <label>Specialization</label>
+              <label for="facultySpecialization">Specialization</label>
               <input
                 type="text"
                 id="facultySpecialization"
                 name="facultySpecialization"
                 placeholder="e.g., Data Structures, AI"
+                autocomplete="off"
                 required
               />
             </div>
           </div>
           <div class="form-row">
             <div class="form-group">
-              <label>Department</label>
+              <label for="facultyDepartment">Department</label>
               <select id="facultyDepartment" name="facultyDepartment" required>
                 <option value="">Select department</option>
               </select>
             </div>
             <div class="form-group">
-              <label>Email</label>
+              <label for="facultyEmail">Email</label>
               <input
                 type="email"
                 id="facultyEmail"
                 name="facultyEmail"
                 placeholder="john.smith@university.edu"
+                autocomplete="email"
                 required
               />
             </div>
@@ -324,23 +328,23 @@
           <p>Configure subjects with their lecture and lab hour requirements</p>
           <div class="form-row">
             <div class="form-group">
-              <label>Subject Name</label>
-              <input type="text" id="subjectName" name="subjectName" placeholder="e.g. Data Structures" required />
+              <label for="subjectName">Subject Name</label>
+              <input type="text" id="subjectName" name="subjectName" placeholder="e.g. Data Structures" autocomplete="off" required />
             </div>
             <div class="form-group">
-              <label>Subject Code</label>
-              <input type="text" id="subjectCode" name="subjectCode" placeholder="e.g. CS201" required />
+              <label for="subjectCode">Subject Code</label>
+              <input type="text" id="subjectCode" name="subjectCode" placeholder="e.g. CS201" autocomplete="off" required />
             </div>
           </div>
           <div class="form-row">
             <div class="form-group">
-              <label>Course/Program Name</label>
+              <label for="subjectCourse">Course/Program Name</label>
               <select id="subjectCourse" name="subjectCourse" required>
                 <option value="">Select course</option>
               </select>
             </div>
             <div class="form-group">
-              <label>Department</label>
+              <label for="subjectDepartment">Department</label>
               <select id="subjectDepartment" name="subjectDepartment" required>
                 <option value="">Select department</option>
               </select>
@@ -348,19 +352,19 @@
           </div>
           <div class="form-row">
             <div class="form-group">
-              <label>Lecture Hours</label>
+              <label for="lectureHours">Lecture Hours</label>
               <input type="number" id="lectureHours" name="lectureHours" placeholder="3" min="0" required />
             </div>
             <div class="form-group">
-              <label>Lab Hours</label>
+              <label for="labHours">Lab Hours</label>
               <input type="number" id="labHours" name="labHours" placeholder="2" min="0" required />
             </div>
             <div class="form-group">
-              <label>Total Hours/Week</label>
+              <label for="totalHours">Total Hours/Week</label>
               <input type="number" id="totalHours" name="totalHours" placeholder="5" min="1" readonly />
             </div>
             <div class="form-group">
-              <label>Lab Duration (per session)</label>
+              <label for="labDuration">Lab Duration (per session)</label>
               <select id="labDuration" name="labDuration">
                 <option value="0">No Lab</option>
                 <option value="1">1 Hour</option>
@@ -372,13 +376,13 @@
           </div>
           <div class="form-row">
             <div class="form-group">
-              <label>Assigned Faculty</label>
+              <label for="assignedFaculty">Assigned Faculty</label>
               <select id="assignedFaculty" name="assignedFaculty" required>
                 <option value="">Select faculty</option>
               </select>
             </div>
             <div class="form-group">
-              <label>Semester</label>
+              <label for="subjectSemester">Semester</label>
               <select id="subjectSemester" name="subjectSemester" required>
                 <option value="">Select semester</option>
               </select>
@@ -399,11 +403,11 @@
           <p>Add classroom and labs with their specifications</p>
           <div class="form-row">
             <div class="form-group">
-              <label>Room Number</label>
-              <input type="text" id="roomNumber" name="roomNumber" placeholder="e.g., A101, Lab-201" required />
+              <label for="roomNumber">Room Number</label>
+              <input type="text" id="roomNumber" name="roomNumber" placeholder="e.g., A101, Lab-201" autocomplete="off" required />
             </div>
             <div class="form-group">
-              <label>Room Type</label>
+              <label for="roomType">Room Type</label>
               <select id="roomType" name="roomType" required>
                 <option value="">Select room type</option>
               </select>
@@ -411,17 +415,18 @@
           </div>
           <div class="form-row">
             <div class="form-group">
-              <label>Building</label>
+              <label for="roomBuilding">Building</label>
               <input
                 type="text"
                 id="roomBuilding"
                 name="roomBuilding"
                 placeholder="e.g., Main Building, IT Block"
+                autocomplete="off"
                 required
               />
             </div>
             <div class="form-group">
-              <label>Floor</label>
+              <label for="roomFloor">Floor</label>
               <select id="roomFloor" name="roomFloor" required>
                 <option value="">Select floor</option>
                 <option value="Ground Floor">Ground Floor</option>
@@ -434,16 +439,17 @@
           </div>
           <div class="form-row">
             <div class="form-group">
-              <label>Capacity</label>
+              <label for="roomCapacity">Capacity</label>
               <input type="number" id="roomCapacity" name="roomCapacity" placeholder="e.g., 60" min="1" required />
             </div>
             <div class="form-group">
-              <label>Equipment (Optional)</label>
+              <label for="roomEquipment">Equipment (Optional)</label>
               <input
                 type="text"
                 id="roomEquipment"
                 name="roomEquipment"
                 placeholder="e.g., Projector, AC, Lab Equipment"
+                autocomplete="off"
               />
             </div>
           </div>
