--- a/login.html
+++ b/login.html
@@ -28,6 +28,7 @@
               id="email"
               name="email"
               placeholder="Enter your email"
+              autocomplete="email"
               required />
           </div>
 
@@ -38,11 +39,12 @@
               id="password"
               name="password"
               placeholder="Enter your password"
+              autocomplete="current-password"
               required />
           </div>
 
           <div class="form-options">
-            <label class="checkbox-container">
+            <label for="rememberMe" class="checkbox-container">
               <input type="checkbox" id="rememberMe" name="rememberMe" />
               <span class="checkmark"></span>
               Remember me
