--- a/register.html
+++ b/register.html
@@ -29,6 +29,7 @@
                 id="firstName"
                 name="firstName"
                 placeholder="Enter your first name"
+                autocomplete="given-name"
                 required />
             </div>
             <div class="form-group">
@@ -38,6 +39,7 @@
                 id="lastName"
                 name="lastName"
                 placeholder="Enter your last name"
+                autocomplete="family-name"
                 required />
             </div>
           </div>
@@ -49,6 +51,7 @@
               id="email"
               name="email"
               placeholder="Enter your email address"
+              autocomplete="email"
               required />
           </div>
 
@@ -59,6 +62,7 @@
               id="password"
               name="password"
               placeholder="Create a password"
+              autocomplete="new-password"
               required
               minlength="8" />
           </div>
@@ -69,6 +73,7 @@
               id="confirmPassword"
               name="confirmPassword"
               placeholder="Confirm your password"
+              autocomplete="new-password"
               required
               minlength="8" />
           </div>
@@ -90,6 +95,7 @@
               id="institution"
               name="institution"
               placeholder="Enter your institution name"
+              autocomplete="organization"
               required />
           </div>
 
