--- a/login.html
+++ b/login.html
@@ -55,7 +55,9 @@
           <button type="submit" class="btn auth-btn">Sign In</button>
 
           <div class="auth-footer">
-            <p>Don't have an account? <a href="register.html">Create Account</a></p>
+            <p>
+              Don't have an account? <a href="register.html">Create Account</a>
+            </p>
           </div>
         </form>
       </div>
@@ -69,7 +71,11 @@
     </div>
 
     <!-- Toast Notification Container -->
-    <div id="toast-container" class="toast-container" aria-live="polite" aria-label="Notifications"></div>
+    <div
+      id="toast-container"
+      class="toast-container"
+      aria-live="polite"
+      aria-label="Notifications"></div>
 
     <!-- JavaScript -->
     <script src="auth.js"></script>
