--- a/register.html
+++ b/register.html
@@ -64,8 +64,7 @@
               placeholder="Create a password"
               autocomplete="new-password"
               required
-              minlength="8"
-            />
+              minlength="8" />
           </div>
           <div class="form-group">
             <label for="confirmPassword">Confirm Password</label>
@@ -76,8 +75,7 @@
               placeholder="Confirm your password"
               autocomplete="new-password"
               required
-              minlength="8"
-            />
+              minlength="8" />
           </div>
 
           <div class="form-group">
@@ -107,9 +105,15 @@
               <label for="department">Department</label>
               <select id="department" name="department">
                 <option value="">Select department</option>
-                <option value="Computer Engineering">Computer Engineering</option>
-                <option value="Information Technology">Information Technology</option>
-                <option value="Artificial Intelligence & Data Science">Artificial Intelligence & Data Science</option>
+                <option value="Computer Engineering">
+                  Computer Engineering
+                </option>
+                <option value="Information Technology">
+                  Information Technology
+                </option>
+                <option value="Artificial Intelligence & Data Science">
+                  Artificial Intelligence & Data Science
+                </option>
               </select>
             </div>
 
@@ -135,9 +139,15 @@
               <label for="teacherDepartment">Department (Optional)</label>
               <select id="teacherDepartment" name="department">
                 <option value="">Select department</option>
-                <option value="Computer Engineering">Computer Engineering</option>
-                <option value="Information Technology">Information Technology</option>
-                <option value="Artificial Intelligence & Data Science">Artificial Intelligence & Data Science</option>
+                <option value="Computer Engineering">
+                  Computer Engineering
+                </option>
+                <option value="Information Technology">
+                  Information Technology
+                </option>
+                <option value="Artificial Intelligence & Data Science">
+                  Artificial Intelligence & Data Science
+                </option>
               </select>
             </div>
           </div>
@@ -159,7 +169,11 @@
     </div>
 
     <!-- Toast Notification Container -->
-    <div id="toast-container" class="toast-container" aria-live="polite" aria-label="Notifications"></div>
+    <div
+      id="toast-container"
+      class="toast-container"
+      aria-live="polite"
+      aria-label="Notifications"></div>
 
     <!-- JavaScript -->
     <script src="auth.js"></script>
